objects/MRS_Layer_Chip_Status_Hierarchy__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Approve__c</fullName>
        <label>Approve</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disapprove__c</fullName>
        <label>Disapprove</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <label>Done</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InProgress__c</fullName>
        <label>InProgress</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <label>NA</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Done__c</fullName>
        <label>Not Done</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Ready__c</fullName>
        <label>Not Ready</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <label>Ready</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released__c</fullName>
        <label>Released</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>MRS_Layer_Chip_Status_Hierarchy</label>
</CustomObject>